--- a/style/main.css
+++ b/style/main.css
@@ -68,8 +68,56 @@ body{
 }
 .progress__filled{
     width: 50%;
-    background: #ffc600;
+    background: #ff0000;
     flex: 0;
     flex-basis: 50%;
 }
+input[type=range]{
+    -webkit-appearance: none;
+    background: transparent;
+    width: 100%;
+    margin: 0 5px;
+}
+input[type=range]:focus{
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track{
+    width: 100px;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px rgba(0,0,0,0), 0px 0px 0px rgba(13,13,13,0);
+    background: rgba(255,255,255 0.8);
+    border-radius: 1.3px;
+    border: 0.2px solid rgba(1,1,1,0);
+}
+input[type=range]::-webkit-slider-thumb{
+    box-shadow: 0px 0px 0px rgba(0,0,0,0), 0px 0px 0px rgba(13,13,13,0);
+    width: 15px;
+    height: 15px;
+    border-radius: 50px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -3.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track{
+    background: #ff0000;
+}
+input[type=range]::-moz-range-track{
+    width: 100px;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px rgba(0,0,0,0), 0px 0px 0px rgba(13,13,13,0);
+    background: #ffffff;
+    border-radius: 1.3px;
+    border: 0.2px solid rgba(1,1,1,0);
+}
+input[type=range]::-moz-range-thumb{
+    box-shadow: 0px 0px 0px rgba(0,0,0,0), 0px 0px 0px rgba(13,13,13,0);
+    width: 15px;
+    height: 15px;
+    border-radius: 50px;
+    background: #ffffff;
+    cursor: pointer;
 
+}
